# ideal-palm-tree

./: .env.example  .gitignore  Qwen3_(14B)_Reasoning_Conversational.ipynb  README.md  finetune.ipynb  pyproject.toml  qwen3_reasoning_non_reasoning.ipynb
archive/: 2c. RAFT_Evaluation.ipynb  2ci. llama31_8bn.ipynb  Gemma3_(1B)_GRPO.ipynb  Meta_Synthetic_Data_Llama3_2_(3B).ipynb
notebooks/: 2. llama32_1bn_RAFT.ipynb  2b. RAFT_Finetune.ipynb  2b. RAFT_Finetune_Unsloth.ipynb  2ci. llama31_8bn.ipynb  3a. llama32_1b_grpo.ipynb  3b. qwen25_14b_grpo.ipynb  _evaluations.json  benchmark.csv  dataset_gen.ipynb  finetune_llama32_1bn.ipynb  holdout_dataset.csv  qwen3_reasoning_non_reasoning.ipynb  raft_dataset_gen.ipynb  raft_finetune.ipynb  raft_train.jsonl  rag_evaluation_dataset.json  train.jsonl
notebooks/raft_train/: data-00000-of-00001.arrow  state.json
scripts/: llama32_1b_grpo.py  qwen25_14b_grpo.py
