[project]
name = "ideal-palm-tree"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.6.0",
    "bitsandbytes>=0.45.5",
    "huggingface-hub>=0.30.2",
    "ipywidgets>=8.1.7",
    "jupyter>=1.1.1",
    "peft>=0.15.2",
    "synthetic-data-kit>=0.0.3",
    "transformers>=4.51.3",
    "unsloth>=2025.4.7",
    "vllm>=0.8.5.post1",
    "xformers>=0.0.29.post2",
]
